# PhenoScreen

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
phenoscreen/: cli.py  features.py  mash.py  model.py  predict.py  train.py  utils.py
